src/snapshots/sel__parse__test-16.snap
---
source: src/parse.rs
expression: "t(b\"let {a b, c} 0\")"
---
(
    Top {
        uses: [],
        defs: [],
        script: Some(
            Script {
                head: Apply {
                    base: Binding {
                        loc_let: Location(
                            0,
                            0..3,
                        ),
                        pat: List {
                            loc_open: Location(
                                0,
                                4..5,
                            ),
                            items: [
                                Word {
                                    loc: Location(
                                        0,
                                        5..6,
                                    ),
                                    word: "a",
                                },
                                Word {
                                    loc: Location(
                                        0,
                                        7..8,
                                    ),
                                    word: "b",
                                },
                                Word {
                                    loc: Location(
                                        0,
                                        10..11,
                                    ),
                                    word: "c",
                                },
                            ],
                            rest: None,
                            loc_close: Location(
                                0,
                                11..12,
                            ),
                        },
                        res: Number {
                            loc: Location(
                                0,
                                13..14,
                            ),
                            number: 0.0,
                        },
                        alt: Some(
                            Word {
                                loc: Location(
                                    0,
                                    14..14,
                                ),
                                word: "?",
                            },
                        ),
                    },
                    args: [],
                },
                tail: [],
            },
        ),
    },
    [
        Error(
            Location(
                0,
                4..5,
            ),
            ContextCaused {
                error: Error(
                    Location(
                        0,
                        7..8,
                    ),
                    Unexpected {
                        token: Word(
                            "b",
                        ),
                        expected: "',' between items or closing '}'",
                    },
                ),
                because: Unmatched {
                    open_token: OpenBrace,
                },
            },
        ),
        Error(
            Location(
                0,
                4..12,
            ),
            ContextCaused {
                error: Error(
                    Location(
                        0,
                        14..14,
                    ),
                    Unexpected {
                        token: End,
                        expected: "a value",
                    },
                ),
                because: LetFallbackRequired,
            },
        ),
    ],
)
