src/snapshots/sel__parse__test-22.snap
---
source: src/parse.rs
expression: "t(b\"\ndef a :: b,, # extra comma\ndef b :: a # missing comma\ndef x y z,\ndef 42 :: 42,\ndef :wrong: way around,\ndef _XOPEN_SOURCE, # seen as `def _ XOPEN _ SOURCE` anyways\ndef 1, # does not eat the ',' (does not define anything)\ndef z, # does not eat the ',' (does not define anything)\nhello\n\")"
---
(
    Top {
        uses: [],
        defs: [
            Def {
                loc_def: Location(
                    "<test>",
                    1..4,
                ),
                loc_name: Location(
                    "<test>",
                    5..6,
                ),
                name: "a",
                loc_desc: Location(
                    "<test>",
                    7..9,
                ),
                desc: "",
                to: Apply {
                    base: Value(
                        Word {
                            loc: Location(
                                "<test>",
                                10..11,
                            ),
                            word: "b",
                        },
                    ),
                    args: [],
                },
            },
            Def {
                loc_def: Location(
                    "<test>",
                    28..31,
                ),
                loc_name: Location(
                    "<test>",
                    32..33,
                ),
                name: "b",
                loc_desc: Location(
                    "<test>",
                    34..36,
                ),
                desc: "",
                to: Apply {
                    base: Value(
                        Word {
                            loc: Location(
                                "<test>",
                                37..38,
                            ),
                            word: "a",
                        },
                    ),
                    args: [],
                },
            },
            Def {
                loc_def: Location(
                    "<test>",
                    55..58,
                ),
                loc_name: Location(
                    "<test>",
                    59..60,
                ),
                name: "x",
                loc_desc: Location(
                    "<test>",
                    61..62,
                ),
                desc: "word 'y'",
                to: Apply {
                    base: Value(
                        Word {
                            loc: Location(
                                "<test>",
                                63..64,
                            ),
                            word: "z",
                        },
                    ),
                    args: [],
                },
            },
            Def {
                loc_def: Location(
                    "<test>",
                    66..69,
                ),
                loc_name: Location(
                    "<test>",
                    70..72,
                ),
                name: "number '42'",
                loc_desc: Location(
                    "<test>",
                    73..75,
                ),
                desc: "",
                to: Apply {
                    base: Value(
                        Number {
                            loc: Location(
                                "<test>",
                                76..78,
                            ),
                            number: 42.0,
                        },
                    ),
                    args: [],
                },
            },
            Def {
                loc_def: Location(
                    "<test>",
                    80..83,
                ),
                loc_name: Location(
                    "<test>",
                    84..91,
                ),
                name: "string ':wrong:'",
                loc_desc: Location(
                    "<test>",
                    92..95,
                ),
                desc: "word 'way'",
                to: Apply {
                    base: Value(
                        Word {
                            loc: Location(
                                "<test>",
                                96..102,
                            ),
                            word: "around",
                        },
                    ),
                    args: [],
                },
            },
        ],
        script: Some(
            Script {
                head: Apply {
                    base: Value(
                        Word {
                            loc: Location(
                                "<test>",
                                278..283,
                            ),
                            word: "hello",
                        },
                    ),
                    args: [],
                },
                tail: [],
            },
        ),
    },
    [
        Error(
            Location(
                "<test>",
                12..13,
            ),
            Unexpected {
                token: Comma,
                expected: "a single ',' between 'def's",
            },
        ),
        Error(
            Location(
                "<test>",
                28..31,
            ),
            ContextCaused {
                error: Error(
                    Location(
                        "<test>",
                        55..58,
                    ),
                    Unexpected {
                        token: Def,
                        expected: "a ',' (because of prior 'def')",
                    },
                ),
                because: Unmatched {
                    open_token: Def,
                },
            },
        ),
        Error(
            Location(
                "<test>",
                55..58,
            ),
            ContextCaused {
                error: Error(
                    Location(
                        "<test>",
                        61..62,
                    ),
                    Unexpected {
                        token: Word(
                            "y",
                        ),
                        expected: "name then description after 'def' keyword",
                    },
                ),
                because: Unmatched {
                    open_token: Def,
                },
            },
        ),
        Error(
            Location(
                "<test>",
                66..69,
            ),
            ContextCaused {
                error: Error(
                    Location(
                        "<test>",
                        70..72,
                    ),
                    Unexpected {
                        token: Number(
                            42.0,
                        ),
                        expected: "name then description after 'def' keyword",
                    },
                ),
                because: Unmatched {
                    open_token: Def,
                },
            },
        ),
        Error(
            Location(
                "<test>",
                80..83,
            ),
            ContextCaused {
                error: Error(
                    Location(
                        "<test>",
                        84..91,
                    ),
                    Unexpected {
                        token: Bytes(
                            [
                                119,
                                114,
                                111,
                                110,
                                103,
                            ],
                        ),
                        expected: "name then description after 'def' keyword",
                    },
                ),
                because: Unmatched {
                    open_token: Def,
                },
            },
        ),
        Error(
            Location(
                "<test>",
                104..107,
            ),
            ContextCaused {
                error: Error(
                    Location(
                        "<test>",
                        108..121,
                    ),
                    Unexpected {
                        token: Unknown(
                            "_XOPEN_SOURCE",
                        ),
                        expected: "name then description after 'def' keyword",
                    },
                ),
                because: Unmatched {
                    open_token: Def,
                },
            },
        ),
        Error(
            Location(
                "<test>",
                164..167,
            ),
            ContextCaused {
                error: Error(
                    Location(
                        "<test>",
                        168..169,
                    ),
                    Unexpected {
                        token: Number(
                            1.0,
                        ),
                        expected: "name then description after 'def' keyword",
                    },
                ),
                because: Unmatched {
                    open_token: Def,
                },
            },
        ),
        Error(
            Location(
                "<test>",
                221..224,
            ),
            ContextCaused {
                error: Error(
                    Location(
                        "<test>",
                        226..227,
                    ),
                    Unexpected {
                        token: Comma,
                        expected: "name then description after 'def' keyword",
                    },
                ),
                because: Unmatched {
                    open_token: Def,
                },
            },
        ),
    ],
)
