src/snapshots/sel__parse__test-23.snap
---
source: src/parse.rs
expression: "t(b\"use :a: a, def b:: b, use :c: c, d\")"
---
(
    Top {
        uses: [
            Use {
                loc_use: Location(
                    "<test>",
                    0..3,
                ),
                loc_path: Location(
                    "<test>",
                    4..7,
                ),
                path: "a",
                loc_prefix: Location(
                    "<test>",
                    8..9,
                ),
                prefix: "a",
            },
        ],
        defs: [
            Def {
                loc_def: Location(
                    "<test>",
                    11..14,
                ),
                loc_name: Location(
                    "<test>",
                    15..16,
                ),
                name: "b",
                loc_desc: Location(
                    "<test>",
                    16..18,
                ),
                desc: "",
                to: Apply {
                    base: Value(
                        Word {
                            loc: Location(
                                "<test>",
                                19..20,
                            ),
                            word: "b",
                        },
                    ),
                    args: [],
                },
            },
        ],
        script: Some(
            Script {
                head: Apply {
                    base: Value(
                        Word {
                            loc: Location(
                                "<test>",
                                22..25,
                            ),
                            word: "keyword 'use'",
                        },
                    ),
                    args: [
                        Bytes {
                            loc: Location(
                                "<test>",
                                26..29,
                            ),
                            bytes: [
                                99,
                            ],
                        },
                        Word {
                            loc: Location(
                                "<test>",
                                30..31,
                            ),
                            word: "c",
                        },
                    ],
                },
                tail: [
                    (
                        Location(
                            "<test>",
                            31..32,
                        ),
                        Apply {
                            base: Value(
                                Word {
                                    loc: Location(
                                        "<test>",
                                        33..34,
                                    ),
                                    word: "d",
                                },
                            ),
                            args: [],
                        },
                    ),
                ],
            },
        ),
    },
    [
        Error(
            Location(
                "<test>",
                22..25,
            ),
            Unexpected {
                token: Use,
                expected: "'use's to all be before the first 'def'",
            },
        ),
        Error(
            Location(
                "<test>",
                22..25,
            ),
            Unexpected {
                token: Use,
                expected: "a value",
            },
        ),
    ],
)
