src/snapshots/sel__parse__test-28.snap
---
source: src/parse.rs
expression: "t(b\"x[x {a b,, c d, y]y\")"
---
(
    Top {
        uses: [],
        defs: [],
        script: Some(
            Script {
                head: Apply {
                    base: Value(
                        Word {
                            loc: Location(
                                "<test>",
                                0..1,
                            ),
                            word: "x",
                        },
                    ),
                    args: [
                        Subscr {
                            loc_open: Location(
                                "<test>",
                                1..2,
                            ),
                            subscr: Script {
                                head: Apply {
                                    base: Value(
                                        Word {
                                            loc: Location(
                                                "<test>",
                                                2..3,
                                            ),
                                            word: "x",
                                        },
                                    ),
                                    args: [
                                        List {
                                            loc_open: Location(
                                                "<test>",
                                                4..5,
                                            ),
                                            items: [
                                                Apply {
                                                    base: Value(
                                                        Word {
                                                            loc: Location(
                                                                "<test>",
                                                                5..6,
                                                            ),
                                                            word: "a",
                                                        },
                                                    ),
                                                    args: [
                                                        Word {
                                                            loc: Location(
                                                                "<test>",
                                                                7..8,
                                                            ),
                                                            word: "b",
                                                        },
                                                    ],
                                                },
                                            ],
                                            rest: Some(
                                                ListRest {
                                                    loc_comma: Location(
                                                        "<test>",
                                                        9..10,
                                                    ),
                                                    apply: Apply {
                                                        base: Value(
                                                            Word {
                                                                loc: Location(
                                                                    "<test>",
                                                                    11..12,
                                                                ),
                                                                word: "c",
                                                            },
                                                        ),
                                                        args: [
                                                            Word {
                                                                loc: Location(
                                                                    "<test>",
                                                                    13..14,
                                                                ),
                                                                word: "d",
                                                            },
                                                        ],
                                                    },
                                                },
                                            ),
                                            loc_close: Location(
                                                "<test>",
                                                14..15,
                                            ),
                                        },
                                    ],
                                },
                                tail: [
                                    (
                                        Location(
                                            "<test>",
                                            14..15,
                                        ),
                                        Apply {
                                            base: Value(
                                                Word {
                                                    loc: Location(
                                                        "<test>",
                                                        16..17,
                                                    ),
                                                    word: "y",
                                                },
                                            ),
                                            args: [],
                                        },
                                    ),
                                ],
                            },
                            loc_close: Location(
                                "<test>",
                                17..18,
                            ),
                        },
                        Word {
                            loc: Location(
                                "<test>",
                                18..19,
                            ),
                            word: "y",
                        },
                    ],
                },
                tail: [],
            },
        ),
    },
    [
        Error(
            Location(
                "<test>",
                4..5,
            ),
            ContextCaused {
                error: Error(
                    Location(
                        "<test>",
                        14..15,
                    ),
                    Unexpected {
                        token: Comma,
                        expected: "closing '}' after ',,'",
                    },
                ),
                because: Unmatched {
                    open_token: OpenBrace,
                },
            },
        ),
    ],
)
