src/snapshots/sel__parse__test-29.snap
---
source: src/parse.rs
expression: "t(b\"\nuse :p: n,\ndef f: d: v,\n[let a={h,, t] 1 0\n\")"
---
(
    Top {
        uses: [
            Use {
                loc_use: Location(
                    "<test>",
                    1..4,
                ),
                loc_path: Location(
                    "<test>",
                    5..8,
                ),
                path: "p",
                loc_prefix: Location(
                    "<test>",
                    9..10,
                ),
                prefix: "n",
            },
        ],
        defs: [
            Def {
                loc_def: Location(
                    "<test>",
                    12..15,
                ),
                loc_name: Location(
                    "<test>",
                    16..17,
                ),
                name: "f",
                loc_desc: Location(
                    "<test>",
                    17..21,
                ),
                desc: "d",
                to: Apply {
                    base: Value(
                        Word {
                            loc: Location(
                                "<test>",
                                22..23,
                            ),
                            word: "v",
                        },
                    ),
                    args: [],
                },
            },
        ],
        script: Some(
            Script {
                head: Apply {
                    base: Value(
                        Subscr {
                            loc_open: Location(
                                "<test>",
                                25..26,
                            ),
                            subscr: Script {
                                head: Apply {
                                    base: Binding {
                                        loc_let: Location(
                                            "<test>",
                                            26..29,
                                        ),
                                        pat: Pair {
                                            fst: Word {
                                                loc: Location(
                                                    "<test>",
                                                    30..31,
                                                ),
                                                word: "a",
                                            },
                                            loc_equal: Location(
                                                "<test>",
                                                31..32,
                                            ),
                                            snd: List {
                                                loc_open: Location(
                                                    "<test>",
                                                    32..33,
                                                ),
                                                items: [
                                                    Word {
                                                        loc: Location(
                                                            "<test>",
                                                            33..34,
                                                        ),
                                                        word: "h",
                                                    },
                                                ],
                                                rest: Some(
                                                    (
                                                        Location(
                                                            "<test>",
                                                            35..36,
                                                        ),
                                                        Location(
                                                            "<test>",
                                                            37..38,
                                                        ),
                                                        "t",
                                                    ),
                                                ),
                                                loc_close: Location(
                                                    "<test>",
                                                    38..39,
                                                ),
                                            },
                                        },
                                        res: Word {
                                            loc: Location(
                                                "<test>",
                                                38..39,
                                            ),
                                            word: "?",
                                        },
                                        alt: Some(
                                            Word {
                                                loc: Location(
                                                    "<test>",
                                                    38..39,
                                                ),
                                                word: "?",
                                            },
                                        ),
                                    },
                                    args: [],
                                },
                                tail: [],
                            },
                            loc_close: Location(
                                "<test>",
                                38..39,
                            ),
                        },
                    ),
                    args: [
                        Number {
                            loc: Location(
                                "<test>",
                                40..41,
                            ),
                            number: 1.0,
                        },
                        Number {
                            loc: Location(
                                "<test>",
                                42..43,
                            ),
                            number: 0.0,
                        },
                    ],
                },
                tail: [],
            },
        ),
    },
    [
        Error(
            Location(
                "<test>",
                32..33,
            ),
            ContextCaused {
                error: Error(
                    Location(
                        "<test>",
                        38..39,
                    ),
                    Unexpected {
                        token: CloseBracket,
                        expected: "closing '}' after ',,'",
                    },
                ),
                because: Unmatched {
                    open_token: OpenBrace,
                },
            },
        ),
        Error(
            Location(
                "<test>",
                38..39,
            ),
            Unexpected {
                token: CloseBracket,
                expected: "a value",
            },
        ),
        Error(
            Location(
                "<test>",
                30..39,
            ),
            ContextCaused {
                error: Error(
                    Location(
                        "<test>",
                        38..39,
                    ),
                    Unexpected {
                        token: CloseBracket,
                        expected: "a fallback value",
                    },
                ),
                because: LetFallbackRequired,
            },
        ),
    ],
)
